Se agregan más textos

--- a/poems.html
+++ b/poems.html
@@ -74,16 +74,70 @@
               class="carousel-item text-center text-white"
               style="background-color: black"
             >
-              <p class="lead mb-4" style="font-size: 15px">
-                Texto de la página 2
+              <h1>1</h1>
+              <p class="lead mb-4 texto-carrusel" style="font-size: 15px">
+                Incapaz de volverse el pétalo que deja
+                <br />
+                al aire tocar su textura, se esconde
+                <br />
+                tras el velo de su incognita
+                <br />
+                acostumbrado al silencio que no expone
+                <br />
+                su ruido de alma.
+                <br />
               </p>
             </div>
             <div
               class="carousel-item text-center text-white"
               style="background-color: black"
             >
-              <p class="lead mb-4" style="font-size: 15px">
-                Texto de la página 3
+              <h1>3</h1>
+              <p class="lead mb-4 texto-carrusel" style="font-size: 15px">
+                Se está encerrado, uno como uno está dentro de una habitación.
+                <br />
+                No puede salir porque quizá la puerta tiene llave, y la llave
+                <br />
+                tiene forma de desilusión y que a suerte de uno esa llave se
+                esconde.
+                <br /><br />
+                Quizá la ventana tiene barrotes como la jaula que es,
+                <br />
+                rejas de acero inoxdable, inquebrantable.
+                <br />
+                Quizà no tan solo la puerta y la ventana son un artefacto
+                inútil,
+                <br />
+                también lo sería el techo y el suelo,
+                <br />
+                y hasta las paredes.
+                <br /><br />
+                Cada rincón pareciera carecer de escapatoria.
+                <br />
+                El alrededor es de cristal de murano, bello y brillante cristal.
+                <br />
+                No importa cuantos zapatos arroje a las paredes,
+                <br />
+                estan construidas con la mismisima pulcritud de la circunstancia
+                <br />
+                y es indestructible a simple tacto.
+                <br />
+                <br />
+                Uno grita de desesperacion e intenta resistirse, a veces llora.
+                <br />
+                Escucha en silencio el palpitar del espacio.
+                <br />
+                Car, uno se sienta, incluso un puede recostarse sobre el suelo.
+                <br />
+                Rendido, impotente, renunciando a cualquier oposicion
+                superficial.
+                <br />
+                Entonces, ya deswde abajo, mirando hacia arriba y mareado
+                <br />
+                por el color bruñido...
+                <br />
+                acepta que se ha enamorado.
+                <br />
               </p>
             </div>
           </div>
