--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button
             type="button"
             class="btn btn-outline-secondary btn-lg px-4"
-            onclick="location.href='/poems.html'"
+            onclick="location.href='poems.html'"
           >
             Entrar
           </button>
