--- a/poems.html
+++ b/poems.html
@@ -165,7 +165,7 @@
       <footer class="fixed-bottom bg-black text-white">
         <div class="container">
           <p class="text-center">
-            Coded, and written with ❤ by
+            Coded, and written with 🖤 by
             <a href="https://nathker73.netlify.app/" class="link-secondary"
               >na7hk3r</a
             >
